--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "bcryptjs": "^3.0.2",
+    "debounce-promise": "^3.1.2",
     "lodash": "^4.17.21",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
@@ -46,6 +47,7 @@
     "@eslint/eslintrc": "^3.3.1",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/bcryptjs": "^3.0.0",
+    "@types/debounce-promise": "^3.1.9",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
@@ -78,8 +80,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "eslint --fix"
     ]
   }
 }
