--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,6 @@ AUTH_DISCORD_SECRET=""
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/mtg-quiz-app"
+
+# Quiz Configuration
+NEXT_PUBLIC_QUIZ_CARD_COUNT="3"
