fix: resolve test setup and linting issues
- Updated test scripts to use Node.js built-in test runner with tsx
- Fixed TypeScript import paths in test files
- Resolved prettier formatting issues in seeded-random.ts and quiz router
- Added void operators to Node.js test functions to satisfy ESLint
- All tests passing with proper ESM module imports

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
     "start": "next start",
+    "test": "node --import tsx tests/seeded-random.test.ts",
+    "test:watch": "node --import tsx --test --watch 'tests/**/*.test.ts'",
     "typecheck": "tsc --noEmit",
     "prepare": "husky"
   },
@@ -45,6 +47,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
+    "@jest/globals": "^30.0.4",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/bcryptjs": "^3.0.0",
     "@types/debounce-promise": "^3.1.9",
