feat: replace server-side searchCards with client-side fuse.js implementation
- Add fuse.js dependency for efficient fuzzy search
- Create useCardSearch hook for local card name searching
- Update QuizGame to use client-side search instead of API calls
- Remove searchCards API endpoint from quiz router
- Add script to generate card-names.json from database
- Fix unused import in QuizResults component
- Improve search performance by eliminating server round trips
- Maintain inline suggestion UI with Tab-to-accept functionality

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "generate:card-names": "tsx scripts/generate-card-names.ts",
     "postinstall": "prisma generate",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
@@ -35,6 +36,7 @@
     "@trpc/server": "^11.0.0",
     "bcryptjs": "^3.0.2",
     "debounce-promise": "^3.1.2",
+    "fuse.js": "^7.1.0",
     "lodash": "^4.17.21",
     "next": "^15.2.3",
     "next-auth": "5.0.0-beta.25",
