--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "test": "node --import tsx tests/seeded-random.test.ts",
     "test:watch": "node --import tsx --test --watch 'tests/**/*.test.ts'",
     "typecheck": "tsc --noEmit",
-    "prepare": "husky"
+    "prepare": "husky",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
@@ -35,6 +37,7 @@
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
     "bcryptjs": "^3.0.2",
+    "classnames": "^2.5.1",
     "debounce-promise": "^3.1.2",
     "fuse.js": "^7.1.0",
     "lodash": "^4.17.21",
@@ -50,6 +53,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@jest/globals": "^30.0.4",
+    "@storybook/nextjs": "^9.0.15",
     "@tailwindcss/postcss": "^4.0.15",
     "@types/bcryptjs": "^3.0.0",
     "@types/debounce-promise": "^3.1.9",
@@ -65,12 +69,14 @@
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-prettier": "^5.5.1",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-storybook": "^9.0.15",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.2",
     "postcss": "^8.5.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "prisma": "^6.5.0",
+    "storybook": "^9.0.15",
     "tailwindcss": "^4.0.15",
     "tsx": "^4.20.3",
     "typescript": "^5.8.2",
